--- a/codelists/cancellation_reason_type.json
+++ b/codelists/cancellation_reason_type.json
@@ -14,5 +14,9 @@
     "expensesCut": {
         "title_uk": "скорочення видатків на здійснення закупівлі товарів, робіт і послуг",
         "title_en": "cut down the expenses of procurement of goods, works and services"
-    }
+    },
+   "dateViolation": {
+    "title_uk": "непідписання договору про закупівлю у строк 35 днів (20 днів - у разі застосування скороченної переговорної процедури закупівлі, 10 днів - у разі застосування процедури запиту цінових пропозицій)",
+    "title_en": "agreement has not been signed in 35 days (20 days if negotiation quick procedure is used, and 10 days if price quotation is used)"
+  }
 }
